Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntegerNumber.quorum
class Main
    action Main
        integer v = Test()
    end

    action Test() returns integer
        number var = 5.0
        return var
    end
end